--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@
     background-color: rgb(153, 245, 153);
     text-align: center;
 }
+
+.data{
+    display:none;
+}
+
+.g-signin2{
+    position: absolute;
+    top: 50%;
+    left:50%;
+    margin-top:-50px;
+    margin-left:-50px;
+}
