--- a/style.css
+++ b/style.css
@@ -28,14 +28,22 @@ table, tr, td{
     width:60%;
 }
 #startDa{
-    width:20%;
+    width:15%;
 }
 #startA{
-    width:20%
+    width:15%
+}
+#startS{
+    width:5%;
+}
+#startDel{
+    width:min-content;
 }
 .description, .date, .amount{
     width: 100%;
 }
+
+
 
 /*normal state*/
 input {
