save data when click save data for all document fields
if u save adn then delete the row it wont delete, its nto editable once saved

--- a/style.css
+++ b/style.css
@@ -104,13 +104,14 @@ input.text{
     overflow: hidden; /* Hides scrollbar */
 
 }
-#newExpense{
+#newExpense, #save{
     padding: 8px;
     margin: 20px;
     cursor: pointer;
 }
-#newExpense:hover{
+#newExpense:hover, #save:hover{
     background-color: gray;
+    size: 1.2em;
 }
 
 #amountI{
