--- a/style.css
+++ b/style.css
@@ -132,7 +132,10 @@ input.text{
 }
 
 .totals{
-    display: inline-block
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:90%;
 }
 #H1totalIncome, #H1totalExpense, #H1difference {
     position: relative;
@@ -140,4 +143,24 @@ input.text{
     margin: 20px;
     border: 2px solid black;
     display: inline-block; /*makes border aroundrtext*/
+}
+
+
+.totalIncome, .totalExpense, .difference {
+    box-sizing: border-box; 
+    padding: 10px;
+    text-align: center; 
+}
+
+#H1totalIncome{
+    background-color: rgba(68, 207, 68, 0.384);
+}
+
+#H1totalExpense{
+    background-color: rgba(209, 75, 75, 0.384);
+}
+
+#logoutButton{
+    padding: 5px 5px;
+    margin: 10px;
 }
