--- a/style.css
+++ b/style.css
@@ -164,3 +164,12 @@ input.text{
     padding: 5px 5px;
     margin: 10px;
 }
+.monthSelector{
+    display:flex;
+}
+#month{
+    margin: 20px;
+}
+#monthPicker{
+    margin: 20px;
+}
