added so when adds new row it outs curent date by deaukt

--- a/style.css
+++ b/style.css
@@ -133,9 +133,15 @@ tr:nth-child(even) {
 
 .description{
     width: 90%;
+    min-width: 70px;
 }
 
 .customCat{
     width:80%;
     text-align: center;
+}
+
+#Breakdown{
+    margin:20px;
+    font-weight: bold;
 }
